@@ -19,11 +19,14 @@
 | | Description | PR
 
 | 🐣
-| Refactor `e2e` common code into `lib/test/integration`
+| Refactor `e2e` common code into `lib/test`
 | https://github.com/knative/client/pull/765[#765]
 
-|===
+| 🐛
+| Fix plugin lookup with file ext on Windows
+| https://github.com/knative/client/pull/774[#774]
 
+|===
 
 ## v0.13.1 (2020-03-25)
 
